# ECE-SeniorDesign24

./: .gitignore  GUI.sh  Gitpush.sh  LANsetup.sh  MS_startup.sh  README.md  WifiConnect.sh  defaultSettings.sh  newBuild.sh  requirements.txt  vidrec.sh  viz.sh
Main/: AuxLeftMatchTest.py  AuxLeftMatchTest_FPS.txt  MainRun.sh  MainRunSlp.sh  ModelRun.sh  ModelShowoff.py  ModelShowoff2.py  PRIM_Main_Jetson.py  RuntimeModel.sh  errorLog.txt  ezphotos.py  ezphotosRun.sh  matchtest.sh
Main/C_Modules/Serial_Main/: Serial_Main.ino
Main/C_Modules/Serial_test/: Serial_test.ino
Main/Docker_Image/: dockerfile
Main/Docker_Image/Disparity/: CMakeLists.txt  package.xml
Main/Docker_Image/Disparity/src/: Camera_Ros.py
Main/Py_Modules/: Camera_Node.py  JEB382_YOLOv8.py  JEB_ROSlaunch.py  Path_Planning.py  SD_constants.py  Serial_Comms.py  Stereo_Camera (copy).py  Stereo_Camera.py  Tele_Camera.py  errorLog.txt  helper_functions.py  test copy.ipynb  test.ipynb  tester.py
Main/Py_Modules/YOLOv8/: BarerTrain.py
Main/UI/: BLE_UI_Functional.py
Main/UI/OLD UIs/: BLE.py  UI_New.py
Main/UI/Tests + Pycharm Env/: BLE_Test  BLE_Test.py  BLE_Working.py  Bluetooth_Connection.py  UI_New.py
camera_ros_node/install/: local_setup.sh  setup.sh
camera_ros_node/install/multisense_lib/lib/: libMultiSense.so.6.1.0
camera_ros_node/log/: latest_build
install/: local_setup.sh  setup.sh
install/multisense_lib/share/multisense_lib/: package.bash  package.zsh
install/multisense_msgs/share/multisense_msgs/: package.dsv  package.ps1  package.sh
log/: latest_build
(+142 files in other folders)
